# SynchroPage

./: .gitignore  README.md  agent-framework.md  deep-research-report.md  pagepair_reader_claude_style_codex_prompt.md  pyproject.toml  recommended-solution.md  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml
apps/desktop/: .gitignore  main.cjs  package-lock.json  package.json  preload.cjs
apps/web/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
config/auth/: openai_oauth.yaml
config/harness/: course_pdf_harness.yaml
config/prompts/: course_agent.prompt.yaml
docs/architecture/: agent-harness.md  course-pdf-agent-framework.md  openai-oauth-gateway.md
docs/decisions/: recommended-solution.md
docs/research/: readest-reader-framework.md
docs/workflows/: course-pdf-pairpack.md  course-pdf-synchropage.md
examples/auth/: openai_oauth_device_login.py
examples/lecture_pairpack/: page_batch.sample.v1.json  sample.v1.json
examples/openai/: gpt55_responses_pdf_request.json
examples/synchropage_lecture/: sample.v1.json  (+1 more)
frontend/: app.js  index.html  styles.css
prompts/: course-agent.config.yaml
scripts/: build-and-install-macos-app.sh  build-desktop-backend.sh  build-macos-app.sh  check-mas-signing.sh  check.sh  run-web.sh  validate_project_files.py
tests/: test_agent_gateway.py  test_document_context.py  test_harness.py  test_integration.py  test_markdown_math.py  test_model_providers.py  test_openai_oauth.py  test_payload_builders.py  test_teaching_gateway.py  test_web_app.py
(+104 files in other folders)
