[project]
name = "pdf-agent"
version = "0.1.0"
description = "Industrial harness for stable course PDF agent workflows."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pdf-agent-web = "pdf_agent.server.web_app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
